# sensor-fusion-stack

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/sensor_fusion_stack/: dataset_recorder.hpp  kalman_tracker.hpp  lidar_clustering.hpp  sensor_fusion.hpp
launch/: clustering.launch.py  detection.launch.py  fusion.launch.py  rviz.launch.py  simulation.launch.py  tracking.launch.py
rviz/: config.rviz
scripts/: camera_detector.py  test_detection.sh  test_yolo.py
src/: dataset_recorder.cpp  kalman_tracker.cpp  lidar_clustering.cpp  sensor_fusion.cpp
urdf/: robot.urdf.xacro
worlds/: detection_test_world.world  realistic_world.world  test_world.world
